# eqf_vio

./: .gitignore  EQVIO_config.yaml  README.md
eqf_vio/: CMakeLists.txt  EQVIO_config_template.yaml  package.xml
eqf_vio/include/eqf_vio/: CSVReader.h  EqFMatrices.h  IMUVelocity.h  VIOFilter.h  VIOFilterSettings.h  VIOGroup.h  VIOState.h  VisionMeasurement.h
eqf_vio/libs/: CMakeLists.txt
eqf_vio/libs/core/: CMakeLists.txt
eqf_vio/libs/core/include/: SE3.h  SO3.h  SOT3.h  common.h
eqf_vio/libs/core/src/: SE3.cpp  SO3.cpp  SOT3.cpp  common.cpp
eqf_vio/libs/visualisation/: CMakeLists.txt
eqf_vio/libs/visualisation/include/: PlotDataTypes.h  Plotter.h
eqf_vio/libs/visualisation/src/: Plotter.cpp  main.cpp
eqf_vio/src/: EqFMatrices.cpp  IMUVelocity.cpp  VIOFilter.cpp  VIOGroup.cpp  VIOState.cpp  VisionMeasurement.cpp  main.cpp  main_gift.cpp
eqf_vio/test/: CMakeLists.txt  GTestCMakeLists.txt.in  test_CSVReader.cpp  test_CoordinateCharts.cpp  test_EqFMatrices.cpp  test_VIOGroup.cpp  test_VIOGroupActions.cpp  test_VIOLift.cpp  test_common.cpp  testing_utilities.cpp  testing_utilities.h
eqf_vio_ros/: CMakeLists.txt  package.xml
eqf_vio_ros/config/: eqf_vio_config.yaml
eqf_vio_ros/launch/: eqf_vio_ros.launch
eqf_vio_ros/src/: eqf_vio_ros_node.cpp
